.provarCaches/00D5f000005vwGkEAI/objects/rstk__woiss__c.object
<CustomObject>
    <fields>
        <fullName>rstk__soiss_rvpack__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Reverse packaged inventory</inlineHelpText>
        <label>Reverse Package</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soiss_rvpick__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Reverse picked inventory</inlineHelpText>
        <label>Reverse Issue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soiss_rvship__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Reverse shipments that have not been invoiced</inlineHelpText>
        <label>Reverse Ship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soiss_ship__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Ship from packaged lines</inlineHelpText>
        <label>Ship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soiss_status__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>SO Issue Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soiss_transcomments__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Transaction Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__soiss_unpackage__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Un-Package</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soissr_qty__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Reverse Qty / Serials</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soissr_qtyiss__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Issue Qty</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soissr_soorddmdcst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>soissr_soorddmdcst</label>
        <referenceTo>rstk__soorddmdcst__c</referenceTo>
        <relationshipLabel>ZZ-WO Issue</relationshipLabel>
        <relationshipName>ZZ_WO_Issue</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soissr_srlsoorddmdcsts__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Reverse Serials</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soissr_srlsoorddmdnums__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Reverse Serial Numbers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soissr_txncomment__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Txn Comment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sowb_allyoucan__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>For internal use only</inlineHelpText>
        <label>All you can</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__sowb_allyoucannop__c</fullName>
        <defaultValue>false</defaultValue>
        <label>All You Can - No Partials</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__sowb_error__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Line Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sowb_info__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>sowb_info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sowb_needuser__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>sowb_needuser</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__sowb_process__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>sowb_process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__sowb_procqty__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Qty To Be Issued</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sowb_qtyavail__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>sowb_qtyavail</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sowb_shipper__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>sowb_shipper</label>
        <referenceTo>rstk__soship__c</referenceTo>
        <relationshipLabel>ZZ-WO Issue</relationshipLabel>
        <relationshipName>ZZ_WO_Issue</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sowb_sohdr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>sowb_sohdr</label>
        <referenceTo>rstk__sohdr__c</referenceTo>
        <relationshipLabel>ZZ-WO Issue (sowb_sohdr)</relationshipLabel>
        <relationshipName>ZZ_WO_Issue1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sowb_soline__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>sowb_soline</label>
        <referenceTo>rstk__soline__c</referenceTo>
        <relationshipLabel>ZZ-WO Issue (sowb_soline)</relationshipLabel>
        <relationshipName>ZZ_WO_Issue1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__temp_decnumber1__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>temp_decnumber1</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__woiss_allow_over_issue_ind__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Allow Over Issue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__woiss_alt_qty_dflt_opt__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, components quantities are adjusted to be consistent with the quantity accepted.</inlineHelpText>
        <label>Default Comp Qty per Parent Qty Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__woiss_backflush_ind__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Include Backflush</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__woiss_compitem2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>WO Component</inlineHelpText>
        <label>Component</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>ZZ-WO Issue</relationshipLabel>
        <relationshipName>ZZ_WO_Issue</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__woiss_compitem__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>dtl_compitem</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__woiss_decqtyavail__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Loc Qty</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__woiss_decqtyiss__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Issued</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__woiss_decqtyoutstdg__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Remaining</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__woiss_decqtyreq__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Required</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__woiss_displayoptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Display Options</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Display All Components</fullName>
                    <default>true</default>
                    <label>Display All Components</label>
                </value>
                <value>
                    <fullName>Display Non-Serial Components</fullName>
                </value>
                <value>
                    <fullName>Display Serial Components</fullName>
                </value>
                <value>
                    <fullName>Include Backflush</fullName>
                </value>
                <value>
                    <fullName>Allow Over-Issue</fullName>
                </value>
                <value>
                    <fullName>Auto-Select Serial Numbers</fullName>
                </value>
                <value>
                    <fullName>Display Document</fullName>
                </value>
                <value>
                    <fullName>Display Loc Comments</fullName>
                </value>
                <value>
                    <fullName>Display Dmd Comments</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__woiss_div__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Work Order Division</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>divwoisss</relationshipLabel>
        <relationshipName>divwoisss</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__woiss_dmd_comments__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Replace Dmd Comments</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__woiss_dmd_lne__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>dmd_lne</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__woiss_docno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Document</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__woiss_due_date__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__woiss_empl_name__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>empl_name</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__woiss_errormessage__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>errormessage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__woiss_hdritem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Component Item</label>
        <referenceTo>rstk__peitem__c</referenceTo>
        <relationshipLabel>ZZ-WO Issue</relationshipLabel>
        <relationshipName>ZZ_WO_Issue</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__woiss_hdrlocid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Stock Location</label>
        <referenceTo>rstk__sylocid__c</referenceTo>
        <relationshipLabel>ZZ-WO Issue (Stock Location)</relationshipLabel>
        <relationshipName>ZZ_WO_Issue1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__woiss_hdrordno__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Work Order Number</inlineHelpText>
        <label>Work Order</label>
        <referenceTo>rstk__wocst__c</referenceTo>
        <relationshipLabel>ZZ-WO Issue (hdrordno)</relationshipLabel>
        <relationshipName>ZZ_WO_Issue</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__woiss_iclocitem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>(LocId / LocNum) (Qty) (LocSec)</label>
        <referenceTo>rstk__iclocitem__c</referenceTo>
        <relationshipLabel>ZZ-WO Issue</relationshipLabel>
        <relationshipName>ZZ_WO_Issue</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__woiss_iclocitemname__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Loc Id / Loc Num</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__woiss_iclotitemexpires__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__woiss_isserial__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>woiss_isserial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__woiss_issue_all__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Issue All</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__woiss_issue_decqty__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Issue Qty</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__woiss_issue_qty__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Issue Qty</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__woiss_issueoptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Issue Options</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Allow Overissue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__woiss_issueserials__c</fullName>
        <inlineHelpText>Associated Serial Numbers</inlineHelpText>
        <label>Serial Numbers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__woiss_item_no__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Item No</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__woiss_loc_comments__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Replace Loc Comments</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__woiss_locid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Loc ID</label>
        <referenceTo>rstk__sylocid__c</referenceTo>
        <relationshipLabel>ZZ-WO Issue</relationshipLabel>
        <relationshipName>ZZ_WO_Issue</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__woiss_locnum__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Loc Num</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__woiss_locsec__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>dtl_woiss_locsec</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__woiss_loctype__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>dtl_woiss_loctype</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__woiss_lotno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Lot No</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__woiss_lotserind__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>dtl_woiss_lotserind</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__woiss_order_decqty__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Order Qty</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__woiss_order_qty__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Order Qty</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__woiss_ordno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Order No</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__woiss_ordno_ui__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Order No</label>
        <referenceTo>rstk__wocst__c</referenceTo>
        <relationshipName>woissues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__woiss_proj__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Project</label>
        <referenceTo>rstk__pjproj__c</referenceTo>
        <relationshipLabel>ZZ-WO Issue</relationshipLabel>
        <relationshipName>ZZ_WO_Issue</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__woiss_qtyalloc__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Alloc Qty</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__woiss_qtyavail__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Loc Qty</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__woiss_qtyiss__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Issued</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__woiss_qtyoutstdg__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Remaining</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__woiss_qtyreq__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Required</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__woiss_removed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Removed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__woiss_rissue_qty__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Reverse Qty</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__woiss_run_background_ind__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Use Background Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__woiss_selected__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__woiss_selectedserials__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Serials</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__woiss_selectedsrliclocitemids__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>selectedsrliclocitemids</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__woiss_seq_dmds_by_wctr__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, components are displayed by Work Center sequence as applicable.</inlineHelpText>
        <label>Sequence Demands by Work Center</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__woiss_serial_text__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Lot# / Serial#</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__woiss_serialcompicitem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>When issuing Serial Components, select component from dropdown, then enter Serial Numbers in box below.</inlineHelpText>
        <label>Serial Component</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>ZZ-WO Issue (Serial Component)</relationshipLabel>
        <relationshipName>ZZ_WO_Issue2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__woiss_site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>site_ui</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipLabel>ZZ-WO Issue</relationshipLabel>
        <relationshipName>ZZ_WO_Issue</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__woiss_status_code__c</fullName>
        <inlineHelpText>Issue Status Code</inlineHelpText>
        <label>Status</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__woiss_txn_comments__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Txn Comments</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__woiss_txndate__c</fullName>
        <inlineHelpText>Today&apos;s date, or if backdating is enabled, enter an date prior to today.</inlineHelpText>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__woiss_usrno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>usrno</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__woiss_wbs__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>wbs</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__woiss_woorddmd__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>WO Component</inlineHelpText>
        <label>Component</label>
        <referenceTo>rstk__woorddmd__c</referenceTo>
        <relationshipLabel>ZZ-WO Issue</relationshipLabel>
        <relationshipName>ZZ_WO_Issue</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__woiss_woordsrl__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>When Parent is serialized, select defined serial number to be received from dropdown.</inlineHelpText>
        <label>Parent Item Serial Number</label>
        <referenceTo>rstk__woordsrl__c</referenceTo>
        <relationshipLabel>ZZ-WO Issue</relationshipLabel>
        <relationshipName>woisss</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__woissr_dmdcomment__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>woissr_dmdcomment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__woissr_docno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>woissr_docno</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__woissr_loccomment__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>woissr_loccomment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__woissr_qty__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>woissr_qty</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__woissr_srlwoorddmdcsts__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>woissr_srlwoorddmdcsts</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__woissr_txncomment__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>woissr_txncomment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__woissr_woorddmdcst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>woissr_woorddmdcst</label>
        <referenceTo>rstk__woorddmdcst__c</referenceTo>
        <relationshipLabel>ZZ-WO Issue</relationshipLabel>
        <relationshipName>ZZ_WO_Issue</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>ZZ-WO Issue</label>
    <nameField>
        <label>Component</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ZZ-WO Issue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>